--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -487,9 +487,9 @@ margin-right: 10.1vw;
 }
 .info.venus {
   position: fixed;
-  width: 320px;
-  height: 568px;
-  left: -320px;
+  width: 100vw;
+  height: auto;
+  left: -100vw;
   opacity: 0;
 }
 .venusimg {
@@ -648,5 +648,86 @@ top: 41.5vh;
     height: 5.1vw;
     right: 26vw;
     top: 39.5vh;
+}
+}
+@media only screen and (min-width: 1060px) and (min-height: 700px) and (max-height: 820px) {
+.ce {
+    width: 7.73vw;
+}
+.cece {
+    top: 3vh;
+    right: 19vw;
+}
+.celcium {
+      margin-left: 4vw;
+}
+.v {
+  margin-left: 0.5vw;
+  margin-right: 0.5vw;
+}
+.ku {
+    margin-left: -0.6vw;
+    margin-right: 0.3vw;
+}
+.cu {
+    width: 6.91vw;
+}
+.dis {
+    margin-left: 0.83vw;
+    margin-right: 0.4vw;
+}
+.didi {
+    right: 2.5vw;
+    top: 45.3vh;
+}
+.gigigi {
+    /* padding-top: 0.38vw; */
+    width: 7.53vw;
+}
+.girl {
+  margin-left: 3vw;
+}
+.gigi {
+    width: 4.68vw;
+    bottom: 21.2vh;
+    right: 17.7vw;
+}
+.kol {
+    width: 8.24vw;
+}
+.koliz {
+  margin-left: 1vw;
+}
+.pa {
+    margin-left: 0.5vw;
+    margin-right: 0.3vw;
+}
+.sto {
+    margin-left: 0.7vw;
+    margin-right: 0.7vw;
+}
+.stst {
+    bottom: 6.6vh;
+    left: 28.7vw;
+}
+.ho {
+    margin-left: 1.5vw;
+    margin-right: 2vw;
+}
+.bo {
+    width: 6.6vw;
+}
+.bog {
+  margin-left: 2vw;
+}
+.bobo {
+    left: 25vw;
+  }
+  .cloth {
+    top: 65.5vh;
+    left: 16vw;
+}
+.oval.sto p {
+  margin-top: 4.14vh;
 }
 }
