--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,15 +1,10 @@
 @media only screen and (min-height: 400px) and (max-height: 846px) {
-.ornament {
-  background-image: url("../images/846.png");
-}
+
 .vo {
   width: 12.6vw;
     height: 8.8vw;
     left: 44.3vw;
     top: 4.3vh;
-  }
-  .ornament {
-    background-image: url("../images/950.png");
   }
   .co {
     width: 4.81vw;
@@ -115,9 +110,6 @@
   }
 }
 @media only screen and (min-height: 847px) and (max-height: 951px) {
-.ornament {
-  background-image: url("../images/950.png");
-}
 .vo {
   width: 12.6vw;
     height: 9.8vw;
@@ -538,7 +530,7 @@ margin-right: 10.1vw;
 }
 @media only screen and (min-height: 952px) and (max-height: 1080px) {
 .ornament {
-  background-image: url("../images/testtest.png");
+  /* background-image: url("../images/testtest.png"); */
 }
 
 .vo {
