--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -221,13 +221,389 @@ top: 41.5vh;
     top: 39.5vh;
 }
 }
-@media only screen and (max-height: 768px) and (max-width: 1024px) {
+@media only screen and (min-width: 765px) and (max-width: 780px) and (min-height: 1020px) and (max-height: 1100px) {
+body {
+  overflow: auto;
+}
+.ce {
+    width: 40.73vw;
+}
+.wrapper {
+  width: 4000px;
+  height: 2048px;
+}
+.name h1 {
+  font-size: 16.3vw;
+  margin-top: 43px;
+}
+.name p {
+    margin-left: 8px;
+    font-family: Pragmatica;
+    font-size: 33px;
+    line-height: 38px;
+    width: 245px;
+    width: 367px;
+  }
+  .name {
+    position: absolute;
+    left: 6.5vw;
+}
+.sidepannel {
+  position: fixed;
+  right: 17px;
+    bottom: 17px;
+    top: auto;
+    height: 118px;
+}
+.cursor, #line, #line2, .km {
+  display: none;
+}
+.vulkan {
+    position: relative;
+    background: url(../images/vulkan.svg);
+    background-size: cover;
+    width: 46.14vw;
+        height: 43.95vw;
+  }
+  .vuvu {
+    position: absolute;
+    left: 239.3vw;
+    top: 2.1vw;
+}
+.info {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  left: -100vw;
+  opacity: 0;
+}
+.info p {
+    font-family: Pragmatica;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 3.01vw;
+    line-height: 4vw;
+    margin-left: 4.85vw;
+    margin-right: 6.02vw;
+    color: #FFFFFF;
+}
+.info h2 {
+    font-family: Pragmatica;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 3.24vh;
+    line-height: 2.62vw;
+    color: #FFFFFF;
+    margin-left: 4.85vw;
+    w: ;
+    margin-top: 6.45vw;
+}
+.upperinfo {
+    position: relative;
+    margin-left: 4.85vw;
+    margin-right: 6.02vw;
+    margin-top: 6.32vw;
+    height: 3.69vw;
+    width: auto;
+}
+.info h1 {
+  font-size: 9.27vw;
+}
+.papa {
+    left: 240vw;
+    top: 72vh;
+}
+.pant {
+    position: relative;
+    background: url(../images/pant.svg);
+    background-size: contain;
+    width: 47.44vw;
+    height: 41vw;
+  }
+  .pupil {
+    position: absolute;
+    background-image: url(../images/pupil.svg);
+    width: 7.61vw;
+    height: 7.61vw;
+    left: 52%;
+    top: 25%;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.movement {
+    position: relative;
+    /* background-color: red; */
+    height: 15.1vw;
+    width: 18vw;
+    margin-top: 0.2vw;
+    margin-left: calc(2.26vw - 1.5vw);
+    border-radius: 50%;
+}
+.celcium {
+  width: 4.95vw;
+    height: 39.96vw;
+    margin-left: 18vw;
+}
+.cece {
+    top: 3vh;
+    right: -312vw;
+}
+.sto {
+    margin-left: -14vw;
+    margin-right: -14vw;
+}
+.oval.sto p {
+  margin-top: 21.14vh;
+}
+.bobo {
+    left: 137vw;
+    top: 54.2vh;
+}
+.cubeo {
+  width: 18.98vw;
+    height: 18.98vw;
+    left: 348vw;
+    top: 160.5vh;
+}
+.green {
+  width: 25.46vw;
+    height: 32.25vw;
+}
+.greenarea {
+  width: 24.46vw;
+height: 20.25vw;
+}
+.leafone {
+    position: absolute;
+    background: url(../images/leafone.svg);
+    background-size: contain;
+    width: 12.14vw;
+    height: 11.08vw;
+    top: 5vh;
+    background-repeat: no-repeat;
+    transform-origin: right bottom;
+    transition: transform 0.5s;
+}
+.leaftwo {
+    position: absolute;
+    background: url(../images/leaftwo.svg);
+    background-size: contain;
+    width: 9.55vw;
+    height: 13.62vw;
+    background-repeat: no-repeat;
+    left: 12.5vw;
+    top: 0.5vh;
+    transform-origin: 50% bottom;
+    transition: transform 0.5s;
+}
+.gregre {
+    left: 80.8vw;
+    top: 104vh;
+}
+.fire {
+  transform: scale(4);
+}
+.c {
+  right: -67.6%;
+    top: 33.4%;
+}
+.eh {
+  right: -67.6%;
+top: 22.4%;
+}
+.d {
+    right: -100.3%;
+    top: 121.4%;
+  }
+  .a {
+    left: 345%;
+    top: 40.5%;
+  }
+  .oh {
+    left: 345%;
+    top: 40.5%;
+  }
+  .b {
+    left: 272%;
+    top: 162.5%;
+  }
+  .f, .e {
+    display: none;
+  }
+  .oval p {
+    font-size: 36px;
+    text-align: center;
+    font-family: Pragmatica;
+    line-height: 3.5vh;
+    margin-top: 3.14vh;
+    /* margin-top: 0.38vw; */
+    padding-bottom: 2.4vw;
+    padding-top: 2.38vw;
+}
+.cu {
+    width: 35.91vw;
+}
+.cow, .cows {
+  transform: scale(2);
+}
+
+.clothes {
+    position: absolute;
+    background: url(../images/cloth.svg);
+    background-size: contain;
+    width: 37.68vw;
+    height: 35.36vw;
+    background-repeat: no-repeat;
+    left: 0;
+}
+.draggableble {
+    position: absolute;
+    /* background-color: blue; */
+    top: 81vh;
+    left: 16.5vw;
+    width: 37.68vw;
+    height: 35.36vw;
+    /* opacity: 0.5; */
+}
+
+.straight {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 1.3vw;
+    width: 38.14vw;
+    background-color: black;
+}
+.cubet {
+  width: 23.76vw;
+    height: 23.58vw;
+    margin-left: 13vw;
+}
+.cucu {
+  left: 356vw;
+  top: 157vh;
+}
+.gigigi {
+    /* padding-top: 0.38vw; */
+    width: 36.53vw;
+}
+  .houses {
+    position: relative;
+    background: url(../images/houses.svg);
+    background-size: cover;
+    width: 54.89vw;
+    height: 49.76vw;
+  }
+  .hoho {
+    left: 6.6vw;
+    bottom: -89.8vh;
+}
+.moveit {
+    position: absolute;
+    top: 81vh;
+    left: 16.5vw;
+    transition: 0.5s ease;
+}
+.girl {
+  width: 21.45vw;
+    height: 47.92vw;
+        margin-left: 11vw;
+}
+.gigi {
+    width: 4.68vw;
+    bottom: -56.8vh;
+    right: -314vw;
+}
+.koliz {
+  width: 37.20vw;
+    height: 37.08vw;
+}
+.koko {
+    bottom: -30.3vh;
+    right: -255.2vw;
+}
+.kuzn {
+  width: 40.2vw;
+    height: 35.42vw;
+}
+.didi {
+    right: -402vw;
+    top: 85.3vh;
+}
+.disco {
+  width: 48.29vw;
+      height: 32.19vw;
+}
+.stickleft, .stickright {
+  width: 12.9vw;
+    height: 49.02vw;
+}
+.stst {
+    bottom: -83.4vh;
+    left: 42.7vw;
+    left: 158.7vw;
+}
+.bo {
+    width: 33.53vw;
+}
+.gree {
+    width: 42.02vw;
+}
+.oval.gree p {
+  margin-top: 12.14vh;
+}
+.square p {
+    font-size: 36px;
+    text-align: center;
+    font-family: Pragmatica;
+    line-height: 36px;
+    margin-top: 2.38vw;
+    margin-bottom: 2.4vw;
+    margin-left: 4.83vw;
+    margin-right: 4.83vw;
+}
+.cloth {
+    top: 103.5vh;
+    left: 9vw;
+}
+.bog {
+  width: 22.5vw;
+    height: 47.92vw;
+}
+.white {
+    position: absolute;
+    background: url(../images/eye.svg);
+    background-size: contain;
+    width: 28.52vw;
+    height: 15.57vw;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    right: -181vw;
+    top: 83.9vh;
+}
+.kuku {
+    right: -350vw;
+    top: 44.5vh;
+}
+}
+@media only screen and (max-height: 766px) and (max-width: 1022px) {
 .wrapper {
   width: 1600px;
   height: 1136px;
 }
-body, html {
+.gree {
+    width: 46.02vw;
+}
+.oval.gree p {
 
+    margin-top: 11.14vh;
+
+}
+.green {
+  left: 2vw;
+}
+body, html {
+overflow: auto;
 }
 .name h1 {
   font-size: 16.3vw;
@@ -288,8 +664,18 @@ left: 122vw;
 top: 59.2vh;
       }
 .gregre {
-  top: 32vh;
+  top: 40vh;
   left: 16.8vw;
+}
+.greeno {
+    position: absolute;
+    background-image: url(../images/greeno.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 48.56vw;
+    height: 51.31vw;
+    left: 11.8vw;
+    top: 34vh;
 }
 .ce {
     width: 37.73vw;
@@ -310,7 +696,7 @@ top: 59.2vh;
       width: 27.86vw;
     height: 33.39vw;
     }
-.bog, .girl, .gregre, .pant, .white, .moveit, .draggableble, .celcium {
+.bog, .girl, .greenarea, .pant, .white, .moveit, .draggableble, .celcium {
   transform: scale(6);
 }
 .stickright, .stickleft {
@@ -479,13 +865,14 @@ margin-right: 10.1vw;
 .bog {
   margin-left: 11vw;
 }
-.info.venus {
+.info {
   position: fixed;
   width: 100vw;
-  height: auto;
+  height: 100vh;
   left: -100vw;
   opacity: 0;
 }
+
 .venusimg {
   width: 39.09vw;
       height: 35.33vh;
